--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/forexdb
-spring.datasource.username=yourusername
+spring.datasource.username=forexdb 
 spring.datasource.password=qwerty
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
